--- a/01-fundamentos-de-programacion/mokepon/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/css/styles.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.titulo{
+.titulo {
     color: lightcoral;
     width: 100vw;
     height: 50px;
@@ -12,14 +12,9 @@
     text-align: center;
 }
 
-label {
-    background-color: tomtato;
-}
-
-input { 
-    background-color: aqua;
-}
-
-button {
-    background-color: blueviolet;
+.character-select-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
