--- a/01-fundamentos-de-programacion/mokepon/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/css/styles.css
@@ -6,7 +6,7 @@
 
 .titulo {
     color: lightcoral;
-    width: 100vw;
+    max-width: 100vw;
     height: 50px;
     background-color: teal;
     text-align: center;
@@ -17,4 +17,23 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 5px;
+}
+
+.mokepon-card{
+    width: 100px;
+    height: 100px;
+    background-color: aquamarine;
+    padding: 10px;
+    margin: 10px;
+    border: 1px solid hotpink;
+    border-radius: 5px;
+}
+
+.btn-pet{
+    width: 100px;
+    height: 50px;
+    background-color: darkcyan;
+    border: none;
+    border-radius: 5px;
 }
