--- a/01-fundamentos-de-programacion/mokepon/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/css/styles.css
@@ -1,15 +1,25 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap');
 * {
+    box-sizing: border-box;
+    font-family: "Fredoka", serif;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+}
+
+body{
+    background-color: #051014;
+}
+
+.section-title{
+    align-content: center;
+    height: 100px;
+    max-width: 100vw;
+    text-align: center;
 }
 
 .titulo {
-    color: lightcoral;
-    max-width: 100vw;
-    height: 50px;
-    background-color: teal;
-    text-align: center;
+    color: white;
+    font-size: 32px;
 }
 
 .character-select-section {
@@ -20,14 +30,28 @@
     padding: 5px;
 }
 
+.subtitle{
+    color: white;
+    font-size: 20px;
+}
+
+.cards{
+    display: flex;
+    gap: 10px;
+}
+
 .mokepon-card{
-    width: 100px;
+    width: 200px;
     height: 100px;
-    background-color: aquamarine;
+    background-color: #046E8B;
     padding: 10px;
-    margin: 10px;
-    border: 1px solid hotpink;
-    border-radius: 5px;
+    border-radius: 15px;
+    display: flex;
+    color: whitesmoke;
+}
+
+.mokepon-card img{
+    width: 80px;;
 }
 
 .btn-pet{
@@ -36,4 +60,5 @@
     background-color: darkcyan;
     border: none;
     border-radius: 5px;
+    cursor: pointer;
 }
