--- a/01-fundamentos-de-programacion/mokepon/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/css/styles.css
@@ -38,6 +38,9 @@ body{
 .cards{
     display: flex;
     gap: 10px;
+    max-width: 100%;
+    min-height: 100%;
+    flex-wrap: wrap;
 }
 
 .mokepon-card{
@@ -55,10 +58,14 @@ body{
 }
 
 .btn-pet{
-    width: 100px;
-    height: 50px;
     background-color: darkcyan;
-    border: none;
     border-radius: 5px;
+    border: none;
+    color: #051014;
     cursor: pointer;
+    font-size: 16px;
+    font-weight: 500;
+    height: 50px;
+    margin-top: 30px;
+    width: 100px;
 }
