--- a/01-fundamentos-de-programacion/mokepon/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/css/styles.css
@@ -33,6 +33,7 @@ body {
 .subtitle {
     color: white;
     font-size: 20px;
+    margin-bottom: 20px;
 }
 
 .cards, .btn-attacks-container {
@@ -48,16 +49,22 @@ input {
     display: none;
 }
 
+input:checked + label {
+    background-color: #022F3B;
+    box-shadow: 0px 2px 10px rgba(253, 253, 253, 0.8);
+
+}
+
 .mokepon-card {
-    width: 200px;
-    height: 200px;
     background-color: #046e8b;
-    padding: 10px;
     border-radius: 15px;
-    display: flex;
-    flex-direction: column;
     color: whitesmoke;
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    padding: 10px;
+    width: 200px;
 }
 
 .mokepon-card img {
