Se agrega propiedad hover y transition a boton que selecciona mascotas

--- a/01-fundamentos-de-programacion/mokepon/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/css/styles.css
@@ -83,6 +83,11 @@ input:checked + label {
     height: 50px;
     margin-top: 30px;
     width: 100px;
+    transition: background-color ease-out 0.3s;
+}
+
+.btn-pet:hover{
+    background-color: #45C1E4;
 }
 
 .attack-select {
