--- a/01-fundamentos-de-programacion/mokepon/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/css/styles.css
@@ -118,7 +118,21 @@ input:checked + label {
 
 .btn-reset {
     border: none;
-    color: #046e8b;
+    color: beige;
+    width: 100px;
+    height: 50px;
+    font-weight: 400;
+    cursor: pointer;
+    font-size: 18px;
+    background-color: #022F3B;
+    border-radius: 15px;
+    margin: 15px;
+    transition: all ease-out 0.2s;
+}
+
+.btn-reset:hover {
+    background-color: rgb(1, 33, 43);
+    color: rgba(245, 245, 220, 0.747);
 }
 
 .attacks {
