--- a/01-fundamentos-de-programacion/mokepon/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/css/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap");
 * {
     box-sizing: border-box;
-    font-family: "Fredoka", serif;
+    font-family: "Fredoka", sans-serif;
     margin: 0;
     padding: 0;
 }
