--- a/01-fundamentos-de-programacion/mokepon/public/css/styles.css
+++ b/01-fundamentos-de-programacion/mokepon/public/css/styles.css
@@ -188,6 +188,7 @@ input:checked + label {
     .section-see-map div{
         display: flex;
         align-items: center;
-        flex-direction: column;
+        flex-direction: row;
+        width: 100vw;
     }
 }
